removed mobile detection for testing bg image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Sanare,LLC  | The Employee Benefits Software Development Consulting Company</title>
+    <title>Sanare Technologies, LLC  | Custom Health Care Technology Solutions</title>
 
     <!-- favicon -->
     <link rel="icon" type="image/png" href="assets/images/other_images/favicon.png">
@@ -77,8 +77,8 @@
             <div class="col-sm-10 col-md-9 pull-right">
 
                 <section class="feature-text">
-                  <h1>Engaging employee benefits applications</h1>
-                  <p>Sanare is a premium, specialized software development and consulting company that delivers web and mobile applications for experiencing and administering employee benefits.</p>
+                  <h1>Custom Health Care Technology Solutions</h1>
+                  <p>Sanare is a premium, specialized software development and consulting company that delivers web and mobile applications solving Health Care Cost and Quality Problems.</p>
                   <p><a href="#text" class="link-scroll btn btn-outline-inverse btn-lg">find out more</a></p>
                 </section>
 
@@ -303,7 +303,7 @@
         <div id="go-to-top" onclick="scroll_to_top();"><span class="icon glyphicon glyphicon-chevron-up"></span></div>
 
         <!-- copyright text -->
-        <div class="footer-text-line">&copy; 2001-2014 Sanare, LLC</div>
+        <div class="footer-text-line">&copy; 2001-2015 <br>Sanare Technologies, LLC</div>
       </section>
       <!-- end: Footer -->      
 
@@ -345,8 +345,8 @@
     </script> 
     <![endif]-->  
 
-    <!-- detect mobile browsers -->
-    <script src="assets/js/detectmobilebrowser.js"></script>
+    <!-- detect mobile browsers
+    <script src="assets/js/detectmobilebrowser.js"></script> -->
 
     <!-- owl carousel js -->
     <script src="assets/js/owl-carousel/owl.carousel.min.js"></script>
